# RUSTFLAGS=-Awarnings
[package]
name = "cree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.3.4"
tokio = { version = "1.14.0", features = ["full"] }
tokio-util = "0.6.9"
futures = "0.3"
toml = "0.5.8"
serde_derive = "1.0" 
serde = "1.0"
uuid = { version = "0.8", features = ["v4"] }
bytes = "1.1.0"
chrono = "0.4.19"
